# lite-agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agents.json  app.py  core.py  docker-compose.yml  mcp.json  package-lock.json  package.json  pyproject.toml  tasks.py  tsconfig.json  ui.html
migrations/: 001_tasks.sql
prompts/: system.md
public/: index.html
src/: agent-registry.ts  agent-spec.ts  agent.ts  app.ts  core.ts  index.ts  runs.ts  tasks.ts  workflows.ts
src/agents/: claude-code.ts
subagents/researcher/: agent.py  prompt.md  tools.py
tests/: test_app.py
